openshift/pkg/ote/testdata/networking/networkpolicy/allow-to-openshift-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-openshift-dns
spec:
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
    ports:
    - port: 5353
      protocol: TCP
    - port: 5353
      protocol: UDP
  podSelector: {}
  policyTypes:
  - Egress
